--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<!--会員登録画面-->
+<h2>会員登録</h2>
+<p>登録すると「マイページ」を持つ事ができます。マイページから本のレビューや本を他ユザーへの紹介する事ができます。<br>
+また他のユザーの「ユザーページ」を確認する事で読書の幅を広げましょう。</p>
 
+<!--会員登録フォーム-->
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+  <!--名前を入力-->
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :family_name, "(姓)" %>
+    <%= f.text_field :family_name, autofocus: true %>
+    <%= f.label :given_name, "(名)" %>
+    <%= f.text_field :given_name, autofocus: true %>
+  </div>
+　<!--名前(カナ)を入力-->
+  <div class="field">
+    <%= f.label :family_name_kana, "(セイ)" %>
+    <%= f.text_field :family_name_kana, autofocus: true %>
+    <%= f.label :given_name_kana, "(メイ)" %>
+    <%= f.text_field :given_name_kana, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :email, "メールアドレス" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+  <div class="field">
+    <%= f.label :phone_number, "電話番号" %><br />
+    <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "電話番号" %>
+  </div>
+  <div class="field">
+    <%= f.label :password, "パスワード" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, "パスワード(確認用)" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録する" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+
