--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,10 +1,15 @@
 <h1>Reviews#index</h1>
 <p>Find me in app/views/reviews/index.html.erb</p>
 
-
-<% @reviews.each do |reviews| %>
+<% @reviews.each do |review| %>
 　<%= link_to(user_path(user_id), class: 'list-content') do %>
 		<table class=' table table-hover table-inverse order_table_text'>
+			<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
+      <% books.each do |book| %>
+        <tr>
+				  <td><%= link_to (image_tag(book.medium_image_url)), book.item_url %> <%= book.title %></td>
+			  </tr>
+      <% end %>
 			<tr><td><%= review.title %></td></tr>
 			<tr><td><%= review.text %></td></tr>
 	  </table>
