--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
   <tr><td>性別:<%= @user.gender %></td></tr>
   <tr><td>年齢:<%= @user.age %></td></tr>
   <tr><td>職業:<%= @user.profession %></td></tr>
-  <tr><td>プロフィール:<%= @user.profession %></td></tr>
+  <tr><td>プロフィール:<%= @user.profile %></td></tr>
 </table>
 
 <!-- ユザー関連 その他 -->
