--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-
-<%= form_with @user, method: :patch, local: true do |f| %>
+<h4>編集</h4>
+<%= form_with model: @user ,url: user_path(@user) , method: :patch, local: true do |f| %>
   <div class="field">
     <%= f.label :family_name, "(姓)" %>
     <%= f.text_field :family_name, autofocus: true %>
@@ -27,5 +27,8 @@
   <div class="field">
     <%= f.label :profile, "プロフィール(未記入でも大丈夫です。)" %>
     <%= f.text_field :profile, autofocus: true %>
+  </div>
+  <div class="actions">
+    <%= f.submit "登録する" %>
   </div>
 <% end %>
