--- a/app/views/recommended_books/finish.html.erb
+++ b/app/views/recommended_books/finish.html.erb
@@ -6,7 +6,7 @@
   <% @book_details.each do |book_detail| %>
 	　<%= image_tag(book_detail.large_image_url) %>
 	　<%= book_detail.title %> <%= book_detail.title_kana %>
-	  <%= form.hidden_field :aa, :value => book_detail.isbn %>
+	  <%= form.hidden_field :book_id, :value => book_detail.isbn %>
   <% end %>
 
   <%= form.label :title, "おすすめタイトル" %>
@@ -14,6 +14,6 @@
   <%= form.label :text, "おすすめ文" %>
   <%= form.text_area :text, autofocus: true %>
 
-  <%= form.hidden_field :bb, :value => @recommended_user.id %>
+  <%= form.hidden_field :recommended_user_id, :value => @recommended_user.id %>
 	<%= form.submit '送信', class: "form-control btn btn-success" %>
 <% end %>
