--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#confirm</h1>
-<p>Find me in app/views/users/confirm.html.erb</p>
+<h1>本当に退会しますか？</h1>
+<p>退会すると、会員登録情報やが閲覧できなくなります。また書籍に対してのレビューや、他者に対してのオススメも出来なくなります。退会する場合は、「退会する」をクリックしてください。</p>
+<%= link_to '退会しない', users_path, class: "btn btn-primary" %>
+<%= link_to "退会する", hide_users_path, method: :put, class: "btn btn-danger" %>
