--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,9 @@
 <h4>編集</h4>
 <%= form_with model: @user ,url: user_path(@user) , method: :patch, local: true do |f| %>
   <div class="field">
+    <%= f.attachment_field :profile_image %>
+  </div>
+  <div class="field">
     <%= f.label :family_name, "(姓)" %>
     <%= f.text_field :family_name, autofocus: true %>
     <%= f.label :given_name, "(名)" %>
