--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
 
 <!-- ユザープロフィール覧 -->
 <h4>プロフィール</h4>
+<div><%= image_tag attachment_url(@user, :image, :fill, 300, 300, format: "jpg") %></div>
 <table class="table table-inverse">
   <tr><td>氏名:<%= @user.family_name %><%= @user.given_name %></td></tr>
   <tr><td>カナ:<%= @user.family_name_kana %><%= @user.given_name_kana %></td></tr>
