--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <h4>ユザー一覧</h4>
 <% @users.each do |user| %>
 　<%= link_to(user_path(user.id), class: 'list-content') do %>
+  <div><%= attachment_image_tag user, :image, size: "100x100", format: "jpg" %></div>
 		<table class=' table table-hover table-inverse order_table_text'>
 			<tr>
 				<td><%= user.family_name %><%= user.given_name %></td>
