--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <div><%= attachment_image_tag user, :image, size: "100x100", format: "jpg" %></div>
 		<table class=' table table-hover table-inverse order_table_text'>
 			<tr>
-				<td><%= user.family_name %><%= user.given_name %></td>
+				<td><%= user.nickname %></td>
 				<td><%= user.gender %> / <%= user.age %> / <%= user.profession %></td>
 			</tr>
 			<tr><td><%= user.profile %></td></tr>
