--- a/app/views/recommended_books/show.html.erb
+++ b/app/views/recommended_books/show.html.erb
@@ -3,7 +3,7 @@
 
 <!-- おすすめ数一覧orおすすめされ数一覧の場合で表記を変更 -->
 <% if params[:recommended_patarn] == "1"%>
-  <div><%= @user.family_name %><%= @user.given_name %>さんのおすすめ書籍</div>
+  <div><%= @user.nickname %>さんのおすすめ書籍</div>
 
   <!-- ユーザーに関するの書籍レビュー/おすすめ数へのリンク -->
   <%= render partial: "users/link_index", locals: { reviews: @reviews, recommended: @recommended, recommended_user: @recommended_user, books: @books } %>
@@ -11,7 +11,7 @@
   <%= render partial: "recommended_books/user", locals: { recommended_book: @recommended_book} %>
 
 <% elsif params[:recommended_patarn] == "2"%>
-  <div><%= @user.family_name %><%= @user.given_name %>さんへのおすすめ書籍</div>
+  <div><%= @user.nickname %>さんへのおすすめ書籍</div>
 
   <!-- ユーザーに関するの書籍レビュー/おすすめ数へのリンク -->
   <%= render partial: "users/link_index", locals: { reviews: @reviews, recommended: @recommended, recommended_user: @recommended_user, books: @books } %>
