--- a/app/views/recommended_books/_review.html.erb
+++ b/app/views/recommended_books/_review.html.erb
@@ -1,9 +1,34 @@
-<% reviews.each do |review| %>
-	<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
-  <% books.each do |book| %>
-		<div><%= link_to (image_tag(book.medium_image_url)), book.item_url %> <%= book.title %></div>
-  <% end %>
-	<div><%= review.title %></div>
-	<div><%= review.text %></div>
-  <%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: review.book_id), class: "btn btn-md btn-danger" %>
-<% end %>
+
+<table class=' table table-hover table-inverse order_table_text'>
+	<thead>
+		<tr>
+			<th>書籍画像</th>
+			<th>書籍タイトル / カナ</th>
+			<th>著者名 / カナ</th>
+			<th>出版社名</th>
+			<th>レビュー文</th>
+			<th>書籍確定</th>
+		    <th>書籍詳細</th>
+		<tr>
+	</thead>
+
+  　<% reviews.each do |review| %>
+	　　<% books = RakutenWebService::Books::Book.search(isbn: review.book_id.to_i) %>
+  　　　<% books.each do |item| %>
+			<tbody>
+				<tr>
+					<td><%= image_tag(item.medium_image_url) %></td>
+					<td><%= item.title %><br><%= item.title_kana %></td>
+					<td><%= item.author %><br><%= item.author_kana %></td>
+					<td><%= item.publisher_name %></td>
+					<td>
+						タイトル : <%= review.title %><br>
+						本文 : <%= review.text %>
+					</td>
+					<td><%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: review.book_id), class: "btn btn-md btn-success" %></td>
+					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info" %></td>
+				<tr>
+			</tbody>
+	    <% end %>
+	<% end %>
+</table>
