--- a/app/assets/stylesheets/recommended_books.scss
+++ b/app/assets/stylesheets/recommended_books.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the RecommendedBooks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* オススメ書籍選択画面 レイアウト調整(confirm) */
+.button_position {
+	padding-top: 40px;
+}
+
+.recommend_book_choice_field {
+	padding-bottom: 10px;
+	border-bottom: 1px solid #000000;
+}
+
+.recommend_book_search_field {
+	padding-top: 10px;
+}
+
+/* オススメ書籍選択画面 レイアウト調整(finish) */
+.recommend-field {
+	padding-top: 10px;
+}
