--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,43 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <% if user_signed_in? %>
-    <li><%= link_to "マイページ", user_path(current_user.id) %></li>
-    <li><%= link_to 'ユザー検索', users_path %></li>
-    <li><%= link_to '書籍検索', books_path %></li>
-    <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-  <% else %>
-    <li><%= link_to '会員登録', new_user_registration_path %></li>
-    <li><%= link_to 'ログイン', new_user_session_path %></li>
-  <% end %>
+  <header class="navbar navbar-black" style="background-color:#afeeee;">
+    <div class="container">
+      <nav class="navbar-header navbar-left">
+        <%= link_to root_path do %>
+          <h2>わくわくブック</h2>
+        <% end %>
+      </nav>
+      <nav>
+        <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <p class="navbar-text navbar-left">ようこそ、<%= current_user.nickname %>さん！</p>
+        <li class="h-100"><%= link_to "マイページ", user_path(current_user.id) %></li>
+        <li class="h-100"><%= link_to 'ユザー検索', users_path %></li>
+        <li class="h-100"><%= link_to '書籍検索', books_path %></li>
+        <li class="h-100"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to '会員登録', new_user_registration_path %></li>
+        <li><%= link_to 'ログイン', new_user_session_path %></li>
+        <% end %>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
 
   <body>
-    <div class="container">
-      <%= yield %>
+    <div class="main">
+      <div class="container">
+        <%= yield %>
+      </div>
     </div>
   </body>
+
+  <footer class="footer" style="background-color:#afeeee;">
+    <div class="container">
+      <p class="text-muted">@CopyRight NaganoCake.inc</p>
+    </div>
+  </footer>
 </html>
+
