--- a/app/views/recommended_books/_search.html.erb
+++ b/app/views/recommended_books/_search.html.erb
@@ -1,33 +1,34 @@
 
-<table class=' table table-hover table-inverse order_table_text'>
-	<thead>
-		<tr>
-			<th>商品画像</th>
-			<th>書籍タイトル / カナ</th>
-			<th>著者名 / カナ</th>
-			<th>出版社名</th>
-			<th>発売日</th>
-			<th></th>
-		<tr>
-	</thead>
+<% if books.present? %>
+  <h4>検索結果:<%= books_full.count %>件</h4>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>商品画像</th>
+				<th>書籍タイトル / カナ</th>
+				<th>著者名 / カナ</th>
+				<th>出版社名</th>
+				<th>発売日</th>
+				<th>書籍確定</th>
+				<th>書籍詳細</th>
+			<tr>
+		</thead>
 
-    <% if books.present? %>
-		<% books.each do |book| %>
+		<% books.each do |item| %>
 			<tbody>
 				<tr>
-					<td><%= link_to (image_tag(book.medium_image_url)), book_path(book.isbn) %></td>
+					<td><%= image_tag(item.medium_image_url) %></td>
 					<td>
-						<%= link_to book_path(book.isbn) do %>
-						  <%= book.title %> <%= book.title_kana %>
-						<% end %>
+						<%= item.title %><br><%= item.title_kana %>
 					</td>
-					<td><%= book.author %> <%= book.author_kana %></td>
-					<td><%= book.publisher_name %></td>
-					<td><%= book.sales_date %></td>
-					<td><%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: book.isbn), class: "btn btn-md btn-danger" %></td>
+					<td><%= item.author %><br><%= item.author_kana %></td>
+					<td><%= item.publisher_name %></td>
+					<td><%= item.sales_date %></td>
+					<td><%= link_to "書籍決定",  finish_recommended_book_path(id: recommended_user.id, book_id: item.isbn), class: "btn btn-md btn-success" %></td>
+					<td><%= link_to "詳細情報",  book_path(item.isbn), class: "btn btn-md btn-info" %></td>
 				<tr>
 			</tbody>
-	    <% end %>
-	    <%= paginate books, class: "paginate" %>
-	<% end %>
-</table>
+	  <% end %>
+	  <%= paginate books, class: "paginate" %>
+	</table>
+<% end %>
